--- a/age-verification.html
+++ b/age-verification.html
@@ -22,8 +22,8 @@
 
 body {
 	position: center;
-    font-family: 'Karla', sans-serif; /* font */
-    font-size: 11px; /* text size */
+    font-family: 'Aspira', sans-serif; /* font */
+    font-size: 14px; /* text size */
     letter-spacing: 0.5px; /* space between letters */
     line-height: 160%; /* space between lines */
     color: #444; /* text color */
@@ -37,23 +37,7 @@ body {
     overflow-x: hidden;
 }
 
-a {
-    color: #717f6e; /* link color */
-    text-decoration: none;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    -o-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-}
 
-a:hover {
-    color: #23463f; /* link color on hover */
-    text-decoration: none;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    -o-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-}
 
 .container {
     -webkit-animation: fadein 4s;
@@ -73,7 +57,7 @@ a:hover {
     transform: translate(-50%, -50%);
     border-radius: 30px; /* how curved the corners are */
     width: 55%; /* width of content box */
-    height: 250px; /* height of content box */
+    height: 450px; /* height of content box */
     padding: 10px; /* space between words and outside of box */
     background-color: #fff; /* background color of box */
     
@@ -82,18 +66,24 @@ a:hover {
 
 
 
+[type="checkbox"]
+p {
+
+	text-transform: uppercase;
+    vertical-align:middle;
+}
 
 .button {
     position: absolute;
-    top: 50%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 10px; /* how curved the corners are */
     width: 55%; /* width of content box */
     height: 15px; /* height of content box */
     padding: 5px; /* space between words and outside of box */
-    background-color: #ffddcc; /* background color of box */
-    border: 2px solid #722f37;
+    background-color: #dcdcdc; /* background color of box */
+    border: 2px solid #722F37	;
    
 }
 
@@ -122,8 +112,37 @@ a:hover { cursor:url(https://i.imgur.com/ZM41vky.png),progress!important }
 <h3>Enter your birth year here, please:
 <select id = "YOB"> 
 </select></h3>
+
+<h3> Your wine of choice would be:
+</h3>
 <br>
 <div class="button", id="proceed"><b>Proceed to the website</b></div>
+
+
+
+
+<form>
+  <div class="checkboxes">
+    <label for="x"><input type="checkbox" id="x" /> <span> <b>White</b></span></label>
+    <label for="y"><input type="checkbox" id="y" /> <span><b>Red</b></span></label>
+    <label for="z"><input type="checkbox" id="z" /> <span><b>Rosè</b></span></label>
+	<label for="w"><input type="checkbox" id="w" /> <span><b>Sparkling</b></span></label>
+  </div>
+</form>
+
+
+<form>
+<h3>Are you here for the 1st time?</h3>
+<input type="radio" name="gender" value="male"> Male
+<input type="radio" name="gender" value="female"> Female
+</form>
+
+
+
+
+
+
+
 
 <script>
 var yr = new Date().getFullYear();
@@ -136,8 +155,8 @@ document.getElementById("YOB").innerHTML = years.join("");
 document.getElementById("proceed").onclick = function(){
 	var e = document.getElementById("YOB");
 	var strUser = e.options[e.selectedIndex].value;
-	if (yr-strUser>=18){
-		window.location.href = "https://myprog-try-pace.tumblr.com/";
+	if (yr-strUser>=21){
+		window.location.href = "file:///C:/Users/temp.GT.016/Documents/site.html";
 	}
 	else{
 		alert("Sorry the content on this site is inappropriate for you yet! Come back later~")
@@ -145,3 +164,20 @@ document.getElementById("proceed").onclick = function(){
 }
 </script>
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- apachelounge.com/download -->
